# OpenApiPy

./: .editorconfig  .gitignore  404.html  AUTHORS.md  AUTHORS.rst  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  OpenApiPy.sln  README.md  README.rst  index.html  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  sitemap.xml  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: code_quality_checks.yml  docs_publish.yml  pypi_publish.yml  python-publish.yml  test_pypi_publish.yml
authentication/: index.html
client/: index.html
css/: extra.css
ctrader_open_api/: __init__.py  auth.py  client.py  endpoints.py  factory.py  protobuf.py  tcpProtocol.py
ctrader_open_api/messages/: OpenApiCommonMessages_pb2.py  OpenApiCommonModelMessages_pb2.py  OpenApiMessages_pb2.py  OpenApiModelMessages_pb2.py
docs/: Makefile  authentication.md  client.md  conf.py  index.md  index.rst  installation.rst  make.bat  usage.rst
docs/js/: extra.js
js/: extra.js
overrides/: main.html
samples/ConsoleSample/: ConsoleSample.py  README.md  main.py  main_asyncio.py
samples/KleinWebAppSample/: README.md  credentials.json  main.py  templates.py
samples/KleinWebAppSample/css/: site.css
samples/KleinWebAppSample/js/: site.js  trading-accounts.js
samples/KleinWebAppSample/js/Chart.js/: chart-3.0.0-beta.9.js
samples/KleinWebAppSample/js/chartjs-adapter-luxon/: chartjs-adapter-luxon-0.2.1.js
samples/KleinWebAppSample/js/chartjs-chart-financial/: chartjs-chart-financial.js
samples/KleinWebAppSample/markup/: add_accounts.xml  client_area.xml
samples/jupyter/: README.md  credentials.json  main.ipynb
search/: search_index.json
spotware_open_api/: __init__.py  auth.py  client.py  protobuf.py  tcpProtocol.py
spotware_open_api/messages/: OpenApiCommonMessages_pb2.py  OpenApiMessages_pb2.py  OpenApiModelMessages_pb2.py
src/ConsoleSample/: ConsoleSample.py  ConsoleSample.pyproj
src/OpenApiPy/: OpenApiClient.py  OpenApiPy.pyproj  client.py  clientProtocolFactory.py  endpoints.py  protobuf.py  protocol.py  tcpProtocol.py
src/SpotwareOpenApiPy/: OpenApiClient.py  OpenApiPy.pyproj
src/SpotwareOpenApiPy/messages/: OpenApiCommonModelMessages_pb2.py  OpenApiMessages_pb2.py
tests/: __init__.py  test_spotware_openApiPy.py
tests/OpenApiPyTest/: OpenApiPyTest.pyproj  clientTest.py
