[tool]

[tool.poetry]
name = "spotware_open_api"
version = "0.0.0"
homepage = "https://github.com/spotware/openApiPy"
description = "A Python package for interacting with Spotware Open API"
authors = ["Spotware <connect@spotware.com>"]
documentation = "https://spotware.github.io/openApiPy"
readme = "README.md"
license =  "MIT"
classifiers=[
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.8',
]
include = [
    "LICENSE"
]

[tool.poetry.dependencies]
python = "^3.8"
Twisted = "21.7.0"
protobuf = "3.19.1"

[tool.poetry.dev-dependencies]
Twisted = "21.7.0"
protobuf = "3.19.1"

[tool.black]
line-length=100

[tool.pylint.reports]
output-format="colorized"
reports="y"
include-ids="yes"
msg-template="{msg_id}:{line:3d},{column}: {obj}: {msg}"

[tool.pytest.ini_options]
addopts = "--cov=spotware_openApiPy --cov-branch --cov-report term-missing  -vv --color=yes --cov-fail-under 100"
python_files = "tests.py test_*.py *_tests.py"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
