[tool]

[tool.poetry]
name = "ctrader_open_api"
version = "0.0.0"
homepage = "https://github.com/spotware/openApiPy"
description = "A Python package for interacting with cTrader Open API"
authors = ["Spotware <connect@spotware.com>"]
documentation = "https://spotware.github.io/OpenApiPy"
readme = "README.md"
license =  "MIT"
classifiers=[
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.8',
]
include = [
    "LICENSE"
]

[tool.poetry.dependencies]
python = "^3.8"
Twisted = "24.3.0"
pyOpenSSL = "24.1.0"
protobuf = "3.20.1"
requests = "2.32.3"
inputimeout = "1.0.4"

[tool.poetry.dev-dependencies]
Twisted = "24.3.0"
pyOpenSSL = "24.1.0"
protobuf = "3.20.1"
requests = "2.32.3"
inputimeout = "1.0.4"

[tool.black]
line-length=100

[tool.pylint.reports]
output-format="colorized"
reports="y"
include-ids="yes"
msg-template="{msg_id}:{line:3d},{column}: {obj}: {msg}"

[tool.pytest.ini_options]
addopts = "--cov=ctrader_openApiPy --cov-branch --cov-report term-missing  -vv --color=yes --cov-fail-under 100"
python_files = "tests.py test_*.py *_tests.py"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"
