[metadata]
name = OpenApiPy-Spotware
version = 1.0.0
author = Spotware
author_email = connect@spotware.com
description = A package for interacting with Spotware Open API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/spotware/OpenApiPy
project_urls =
    Bug Tracker = https://github.com/spotware/OpenApiPy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src